baml_language/crates/baml_tests/snapshots/diagnostic_errors/type_reflection_strict/baml_tests__diagnostic_errors__type_reflection_strict__02_parser__reflect_intrinsic_errors.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  CLASS_DEF
    KW_CLASS "class"
    WORD "User"
    L_BRACE "{"
    FIELD
      WORD "name"
      TYPE_EXPR "string"
        WORD "string"
    R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "reflect_type_to_int"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            CHAIN_PATTERN
              BINDING_PATTERN "let x"
                KW_LET "let"
                WORD "x"
              COLON ":"
              TYPE_PATTERN
                TYPE_EXPR "int"
                  WORD "int"
          EQUALS "="
          CALL_EXPR
            PATH_EXPR
              PATH_EXPR "reflect.type_of"
                WORD "reflect"
                DOT "."
                WORD "type_of"
              GENERIC_ARGS
                LESS "<"
                TYPE_EXPR "User"
                  WORD "User"
                GREATER ">"
            CALL_ARGS "()"
              L_PAREN "("
              R_PAREN ")"
          SEMICOLON ";"
        RETURN_STMT "return x;"
          KW_RETURN "return"
          WORD "x"
          SEMICOLON ";"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "unknown_type_in_reflect"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "type"
      WORD "type"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        CALL_EXPR
          PATH_EXPR
            PATH_EXPR "reflect.type_of"
              WORD "reflect"
              DOT "."
              WORD "type_of"
            GENERIC_ARGS
              LESS "<"
              TYPE_EXPR "NonExistent"
                WORD "NonExistent"
              GREATER ">"
          CALL_ARGS "()"
            L_PAREN "("
            R_PAREN ")"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "too_many_type_args"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "type"
      WORD "type"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        CALL_EXPR
          PATH_EXPR
            PATH_EXPR "reflect.type_of"
              WORD "reflect"
              DOT "."
              WORD "type_of"
            GENERIC_ARGS
              LESS "<"
              TYPE_EXPR "int"
                WORD "int"
              COMMA ","
              TYPE_EXPR "string"
                WORD "string"
              GREATER ">"
          CALL_ARGS "()"
            L_PAREN "("
            R_PAREN ")"
        R_BRACE "}"

=== ERRORS ===
None
