baml_language/crates/baml_tests/snapshots/diagnostic_errors/type_reflection_strict/baml_tests__diagnostic_errors__type_reflection_strict__02_parser__strict_normalization.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "assign_type_to_int"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "function_name"
        COLON ":"
        TYPE_EXPR "string"
          WORD "string"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          KW_LET "let"
          WORD "x"
          COLON ":"
          TYPE_EXPR "int"
            WORD "int"
          EQUALS "="
          CALL_EXPR
            PATH_EXPR "baml.llm.get_return_type"
              WORD "baml"
              DOT "."
              WORD "llm"
              DOT "."
              WORD "get_return_type"
            CALL_ARGS "(function_name)"
              L_PAREN "("
              WORD "function_name"
              R_PAREN ")"
          SEMICOLON ";"
        RETURN_STMT "return x;"
          KW_RETURN "return"
          WORD "x"
          SEMICOLON ";"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "pass_type_as_string"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "function_name"
        COLON ":"
        TYPE_EXPR "string"
          WORD "string"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          KW_LET "let"
          WORD "t"
          EQUALS "="
          CALL_EXPR
            PATH_EXPR "baml.llm.get_return_type"
              WORD "baml"
              DOT "."
              WORD "llm"
              DOT "."
              WORD "get_return_type"
            CALL_ARGS "(function_name)"
              L_PAREN "("
              WORD "function_name"
              R_PAREN ")"
          SEMICOLON ";"
        RETURN_STMT "return t;"
          KW_RETURN "return"
          WORD "t"
          SEMICOLON ";"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "type_to_type"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "function_name"
        COLON ":"
        TYPE_EXPR "string"
          WORD "string"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "type"
      WORD "type"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          KW_LET "let"
          WORD "t"
          COLON ":"
          TYPE_EXPR "type"
            WORD "type"
          EQUALS "="
          CALL_EXPR
            PATH_EXPR "baml.llm.get_return_type"
              WORD "baml"
              DOT "."
              WORD "llm"
              DOT "."
              WORD "get_return_type"
            CALL_ARGS "(function_name)"
              L_PAREN "("
              WORD "function_name"
              R_PAREN ")"
          SEMICOLON ";"
        RETURN_STMT "return t;"
          KW_RETURN "return"
          WORD "t"
          SEMICOLON ";"
        R_BRACE "}"

=== ERRORS ===
None
